--- a/PoolGames/app/src/main/res/layout/content_result.xml
+++ b/PoolGames/app/src/main/res/layout/content_result.xml
@@ -13,24 +13,26 @@
     tools:showIn="@layout/app_bar_result">
     <LinearLayout
         android:id="@+id/playerNamesView"
-        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="100dp"
         android:orientation="vertical">
     <android.support.design.widget.TextInputEditText
+        android:id="@+id/p1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:singleLine="true"
-        android:text="Player 1"/>
+        android:hint="Player 1"/>
     <android.support.design.widget.TextInputEditText
+        android:id="@+id/p2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:singleLine="true"
-        android:text="Player 2"/>
+        android:hint="Player 2"/>
         <Button
+            android:id="@+id/startPlay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -60,7 +62,7 @@
             android:orientation="horizontal"
             android:paddingBottom="20dp">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Player 1's:"
@@ -70,7 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="144"
+                android:text="0"
                 android:id="@+id/player1score"
                 android:layout_weight="0.06" />
         </LinearLayout>
@@ -80,7 +82,7 @@
             android:orientation="horizontal"
             android:paddingBottom="20dp">
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Player 2's:"
@@ -90,7 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="124"
+                android:text="0"
                 android:id="@+id/player2score"
                 android:layout_weight="0.06" />
         </LinearLayout>
@@ -100,5 +102,82 @@
             android:text="Player 1 leading with 20points   50 points left"
             android:id="@+id/stats"
             android:layout_weight="0.06" />
+        <GridLayout
+            android:id="@+id/snookerResults"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="4"
+            android:paddingTop="50dp">
+            <ImageButton
+                android:id="@+id/Button01"
+                android:background="@null"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:cropToPadding="true"
+                android:paddingLeft="10dp"
+                android:src="@drawable/red_ball">
+                </ImageButton>
+            <ImageButton
+                android:background="@null"
+                android:id="@+id/Button02"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:cropToPadding="true"
+                android:paddingLeft="10dp"
+                android:src="@drawable/yellow_ball">
+            </ImageButton>
+            <ImageButton
+                android:background="@null"
+                android:id="@+id/Button03"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:cropToPadding="true"
+                android:paddingLeft="10dp"
+                android:src="@drawable/green_ball">
+            </ImageButton>
+            <ImageButton
+                android:background="@null"
+                android:id="@+id/Button04"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:cropToPadding="true"
+                android:paddingLeft="10dp"
+                android:src="@drawable/brown_ball">
+            </ImageButton>
+            <ImageButton
+                android:background="@null"
+                android:id="@+id/Button05"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:cropToPadding="true"
+                android:paddingLeft="10dp"
+                android:src="@drawable/blue_ball">
+            </ImageButton>
+            <ImageButton
+                android:background="@null"
+                android:id="@+id/Button06"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:cropToPadding="true"
+                android:paddingLeft="10dp"
+                android:src="@drawable/pink_ball">
+            </ImageButton>
+            <ImageButton
+                android:background="@null"
+                android:id="@+id/Button07"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:cropToPadding="true"
+                android:paddingLeft="10dp"
+                android:src="@drawable/black_ball">
+            </ImageButton>
+        </GridLayout>
+        <ImageButton
+            android:src="@drawable/next_turn"
+            android:id="@+id/nextTurn"
+            android:layout_width="50dp"
+            android:layout_gravity="bottom|end"
+            android:layout_height="50dp" />
     </LinearLayout>
+
 </RelativeLayout>
