--- a/PoolGames/app/src/main/res/layout/content_result.xml
+++ b/PoolGames/app/src/main/res/layout/content_result.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -19,6 +20,8 @@
         android:orientation="vertical">
     <android.support.design.widget.TextInputEditText
         android:id="@+id/p1"
+        android:textColor="@color/colorText"
+        android:textColorHint="@color/hintColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
@@ -26,6 +29,8 @@
         android:hint="Player 1"/>
     <android.support.design.widget.TextInputEditText
         android:id="@+id/p2"
+        android:textColor="@color/colorText"
+        android:textColorHint="@color/hintColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
@@ -33,6 +38,7 @@
         android:hint="Player 2"/>
         <Button
             android:id="@+id/startPlay"
+            android:background="@color/colorPrimaryDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -52,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/colorText"
             android:text="Player 1's turn"
             android:id="@+id/playerTurn"
             android:layout_gravity="center_horizontal"
@@ -66,9 +73,11 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Player 1's:"
+            android:textColor="@color/colorText"
             android:id="@+id/player1name"
             android:layout_weight="0.06" />
             <TextView
+                android:textColor="@color/colorText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
@@ -82,6 +91,7 @@
             android:orientation="horizontal"
             android:paddingBottom="20dp">
             <TextView
+                android:textColor="@color/colorText"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
@@ -89,6 +99,7 @@
                 android:id="@+id/player2name"
                 android:layout_weight="0.06" />
             <TextView
+                android:textColor="@color/colorText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
@@ -97,18 +108,20 @@
                 android:layout_weight="0.06" />
         </LinearLayout>
         <TextView
+            android:textColor="@color/colorText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Player 1 leading with 20points   50 points left"
             android:id="@+id/stats"
             android:layout_weight="0.06" />
 
-        <ImageButton
-            android:src="@drawable/next_turn"
-            android:id="@+id/nextTurn"
-            android:layout_width="50dp"
-            android:layout_gravity="bottom|end"
-            android:layout_height="50dp" />
-    </LinearLayout>
 
+    </LinearLayout>
+    <ImageButton
+        android:src="@drawable/next_turn"
+        android:id="@+id/nextTurn"
+        android:layout_width="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_height="50dp" />
 </RelativeLayout>
