--- a/PoolGames/app/src/main/res/layout/detail_content_details.xml
+++ b/PoolGames/app/src/main/res/layout/detail_content_details.xml
@@ -1,44 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/buttonsLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f4f4f4"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.developergmail.schultz.nicklas.poolgames.DetailsActivity"
     tools:showIn="@layout/detail_nav_bar_detail">
-
-    <RelativeLayout
-        android:id="@+id/buttonsLayout"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/rules"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Rules"/>
-
-            <Button
-                android:id="@+id/gameon"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Start Playing" />
-        </LinearLayout>
-    </RelativeLayout>
-
-    <ExpandableListView
-        android:id="@+id/lvExp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_centerInParent="true">
+    <Button
+        android:id="@+id/rules"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="Rules"
+        android:textColor="@color/colorText" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/gameon"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:text="Start Playing"
+        android:textColor="@color/colorText" />
+    </LinearLayout>
+</RelativeLayout>
 
