--- a/PoolGames/app/src/main/res/layout/list_item.xml
+++ b/PoolGames/app/src/main/res/layout/list_item.xml
@@ -11,5 +11,9 @@
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
+    <ImageView
+        android:id="@+id/lblListImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
