--- a/PoolGames/app/src/main/res/layout/snooker_results.xml
+++ b/PoolGames/app/src/main/res/layout/snooker_results.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout android:id="@+id/snookerResults"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimary"
     android:layout_height="wrap_content"
     android:columnCount="4"
     android:paddingTop="50dp"
