--- a/PoolGames/app/src/main/res/layout/detail_content_details.xml
+++ b/PoolGames/app/src/main/res/layout/detail_content_details.xml
@@ -8,7 +8,7 @@
     android:background="@color/colorPrimary"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.developergmail.schultz.nicklas.poolgames.DetailsActivity"
+    tools:context=".LauncherActivity"
     tools:showIn="@layout/detail_nav_bar_detail">
     <LinearLayout
         android:layout_width="match_parent"
