--- a/PoolGames/app/src/main/res/layout/main_content_details.xml
+++ b/PoolGames/app/src/main/res/layout/main_content_details.xml
@@ -11,7 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.developergmail.schultz.nicklas.poolgames.DetailsActivity"
+    tools:context=".LauncherActivity"
     tools:showIn="@layout/main_nav_bar_detail">
 
 </ListView>
