--- a/PoolGames/app/src/main/res/layout/launcher_nav_bar_detail.xml
+++ b/PoolGames/app/src/main/res/layout/launcher_nav_bar_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.developergmail.schultz.nicklas.poolgames.ResultActivity">
+    tools:context=".LauncherActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,6 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_result" />
+    <include layout="@layout/launcher_content_details" />
+
 
 </android.support.design.widget.CoordinatorLayout>
