--- a/PoolGames/app/src/main/res/layout/result_content_view.xml
+++ b/PoolGames/app/src/main/res/layout/result_content_view.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.developergmail.schultz.nicklas.poolgames.ResultActivity"
-    tools:showIn="@layout/app_bar_result">
+    tools:showIn="@layout/result_app_bar">
     <LinearLayout
         android:id="@+id/playerNamesView"
         android:layout_width="match_parent"
