--- a/PoolGames/app/src/main/res/layout/fragment_image_object.xml
+++ b/PoolGames/app/src/main/res/layout/fragment_image_object.xml
@@ -19,5 +19,13 @@
         android:id="@+id/rack_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+        <ImageButton
+            android:id="@+id/startGame"
+            android:visibility="invisible"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="bottom|end"
+            android:background="@color/colorPrimaryDark"
+            android:src="@drawable/ic_menu_send"/>
     </LinearLayout>
 </ScrollView>
