--- a/PoolGames/app/src/main/res/layout/activity_rules.xml
+++ b/PoolGames/app/src/main/res/layout/activity_rules.xml
@@ -1,5 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
+<RelativeLayout
+android:id="@+id/viewPagerIndicator"
+android:layout_width="match_parent"
+android:layout_below="@+id/banner_pager"
+android:layout_height="wrap_content"
+android:gravity="center">
+
+<LinearLayout
+    android:id="@+id/viewPagerCountDots"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:gravity="center"
+    android:orientation="horizontal" />
+</RelativeLayout>
+</LinearLayout>
