--- a/PoolGames/app/src/main/res/layout/snooker_results.xml
+++ b/PoolGames/app/src/main/res/layout/snooker_results.xml
@@ -1,72 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout android:id="@+id/snookerResults"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/snookerResults"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:layout_height="wrap_content"
-    android:columnCount="4"
-    android:paddingTop="50dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="vertical">
+
     <ImageButton
         android:id="@+id/Button01"
-        android:background="@null"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@null"
         android:cropToPadding="true"
-        android:paddingLeft="10dp"
+        android:layout_marginLeft="30dp"
+        android:paddingTop="50dp"
+        android:layout_marginBottom="15dp"
         android:src="@drawable/red_ball">
     </ImageButton>
-    <ImageButton
-        android:background="@null"
-        android:id="@+id/Button02"
+
+    <GridLayout
+        android:columnCount="3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:id="@+id/Button02"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:cropToPadding="true"
+            android:layout_marginLeft="30dp"
+            android:paddingBottom="15dp"
+            android:src="@drawable/yellow_ball">
+        </ImageButton>
+
+        <ImageButton
+            android:id="@+id/Button03"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:cropToPadding="true"
+            android:layout_marginLeft="30dp"
+            android:src="@drawable/green_ball">
+        </ImageButton>
+
+        <ImageButton
+            android:id="@+id/Button04"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:cropToPadding="true"
+            android:layout_marginLeft="30dp"
+            android:src="@drawable/brown_ball">
+        </ImageButton>
+
+        <ImageButton
+            android:id="@+id/Button05"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:cropToPadding="true"
+            android:layout_marginLeft="30dp"
+            android:src="@drawable/blue_ball">
+        </ImageButton>
+
+        <ImageButton
+            android:id="@+id/Button06"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:cropToPadding="true"
+            android:layout_marginLeft="30dp"
+            android:src="@drawable/pink_ball">
+        </ImageButton>
+
+        <ImageButton
+            android:id="@+id/Button07"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:cropToPadding="true"
+            android:layout_marginLeft="30dp"
+            android:src="@drawable/black_ball">
+        </ImageButton>
+    </GridLayout>
+
+    <Button
+        android:id="@+id/foulButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:cropToPadding="true"
-        android:paddingLeft="10dp"
-        android:src="@drawable/yellow_ball">
-    </ImageButton>
-    <ImageButton
-        android:background="@null"
-        android:id="@+id/Button03"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:cropToPadding="true"
-        android:paddingLeft="10dp"
-        android:src="@drawable/green_ball">
-    </ImageButton>
-    <ImageButton
-        android:background="@null"
-        android:id="@+id/Button04"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:cropToPadding="true"
-        android:paddingLeft="10dp"
-        android:src="@drawable/brown_ball">
-    </ImageButton>
-    <ImageButton
-        android:background="@null"
-        android:id="@+id/Button05"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:cropToPadding="true"
-        android:paddingLeft="10dp"
-        android:src="@drawable/blue_ball">
-    </ImageButton>
-    <ImageButton
-        android:background="@null"
-        android:id="@+id/Button06"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:cropToPadding="true"
-        android:paddingLeft="10dp"
-        android:src="@drawable/pink_ball">
-    </ImageButton>
-    <ImageButton
-        android:background="@null"
-        android:id="@+id/Button07"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:cropToPadding="true"
-        android:paddingLeft="10dp"
-        android:src="@drawable/black_ball">
-    </ImageButton>
-</GridLayout>
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="30dp"
+        android:text="Foul/Miss"/>
+</LinearLayout>
